@@ -11,6 +11,7 @@ Development Progress	:
       the desktop, the image wasn't being stretched to fill the screen
       as reported by Sander van Dijk.
     * h2patch: updated uhexen2 version to report 1.5.1.
+    * launcher: minor makefile tidy-up.
     * quakedef.h: updated beta date stamp to 2011-11-21.
 
 2011-11-20 (SVN):
